--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>François<br />
+						<h1>François Gauthier<br />
 						360° Recruiter</h1>
-						<p>Passionate about #Sourcing  #Recruitment & #Tech,</a><br />
-						Designing organizations by recruiting top talents with you.</a>.</p>
+						<p>Passionate about Sourcing Recruitment & Tech,</a><br />
+						Designing organizations by recruiting top talents with you</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -42,9 +42,8 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
 
@@ -54,7 +53,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
+									<span class="date">2019</span>
 									<h2><a href="#">And this is a<br />
 									massive headline</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
