--- a/recap-tarw3-meetup.html
+++ b/recap-tarw3-meetup.html
@@ -49,7 +49,7 @@
 									<p>This is a test: I am trying to write a full page in HTML<br /></p>
                   
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="images/empty-chair.jpg" alt="" /></div>
 								<p>📃 Sell vs. test: who's interviewing who?<br>
 								🎤 Alison Eastaway - Head of Talent Acquisition at Sqreen</p><br />
 
