--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="intro">
 						<h1>François Gauthier<br />
 						360° Recruiter</h1>
-						<p>Passionate about Sourcing Recruitment & Tech,</a><br />
-						Designing organizations by recruiting top talents with you</a>.</p>
+						<p>Passionate about Recruitment & Tech</a><br />
+						Let's recruit together!</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
