--- a/template-article.html
+++ b/template-article.html
@@ -26,12 +26,13 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Blog</a></li>
-							<li class="active"><a href="work-with-me.html">Work with me</a></li>
+							<li class="active"><a href="index.html">Article</a></li>
+							<li><a href="lets-work-together.html">Let's work together/a></li>
 							<li><a href="about-me.html">About me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-f"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -62,7 +63,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-linkedin-f"><span class="label">LinkedIn</span></a></li>
+									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
