--- a/template-article.html
+++ b/template-article.html
@@ -25,9 +25,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Blog</a></li>
-							<li class="active"><a href="index.html">Article</a></li>
-							<li><a href="lets-work-together.html">Let's work together/a></li>
+							<li class="active"><a href="index.html">Blog</a></li>
+							<li><a href="lets-work-together.html">Let's work together</a></li>
 							<li><a href="about-me.html">About me</a></li>
 						</ul>
 						<ul class="icons">
