--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">2019</span>
-									<h2><a href="#">I've created this website<br />
-									HTML line after HTML line</a></h2>
+									<h2><a href="#">Creating a website<br />
+									from scratch</a></h2>
 									<p>One day I woke up asking myself if I could create a website from scratch.<br />
 									I got on my keyboard and started typing.<br />
 									The result isn’t disappointing.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/code.jpeg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="creating-a-website-from-scratch.html" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
