--- a/recap-tarw3-meetup.html
+++ b/recap-tarw3-meetup.html
@@ -115,11 +115,10 @@
 		<p>Steve Jobs has a saying that A players hire A players; B players hire C players; and C players hire D players. It doesn't take long to get to Z players.</p>
 
 		<p>Tune your hiring process the right way, to select A players. Also, you don’t only need A players.
-		<ul>
-			<li>Challenge #1: keep the same expectations about the people we hire, as we grow</li>
-			<li>Challenge #2: there is a lot of competition on the market. You want your candidates to have a good experience because they will refer friends. </li>
-			<li>Challenge #3: interview at scale. ~140 interviewers. 40+ skype interviews / week. 25+ on site interviews / week.</li>
-		</lu></p>
+			<p><b>Challenge #1:</b> keep the same expectations about the people we hire, as we grow</p>
+			<p><b>Challenge #2:</b> there is a lot of competition on the market. You want your candidates to have a good experience because they will refer friends</p>
+			<p><b>Challenge #3:</b> interview at scale. ~140 interviewers. 40+ skype interviews / week. 25+ on site interviews / week</p>
+		</p>
 
 		<p>What are we looking for in a candidate? Knowing if this person will be a top performer in the job. This is a prediction challenge. </p>
 
@@ -132,119 +131,119 @@
 			</ul>
 		<p>(source: Schmidt & Hunter analysis, 1998)</p>
 
-<p><b>Criteo tries to have interviews rounds that make sense</b></p>
-<p><b>Structured interviews:<b/> behavioral questions (tell me about a time when you had to…?) and situational questions (what would you do if…?)</p>
-	<ul>
-		<li>Consistent across interviews</li>
-		<li>Reduced bias</li>
-		<li>Fair to candidates</li>
-	</ul>
-	<p>Whiteboard interviews: to check if the person understand what they are doing and if they can go further, not only if they have the answer to your questions.</p>
+		<p><b>Criteo tries to have interviews rounds that make sense </b></p>
+		<p><b>Structured interviews:<b/> behavioral questions (tell me about a time when you had to…?) and situational questions (what would you do if…?)</p>
+			<ul>
+				<li>Consistent across interviews</li>
+				<li>Reduced bias</li>
+				<li>Fair to candidates</li>
+			</ul>
+		<p>Whiteboard interviews: to check if the person understand what they are doing and if they can go further, not only if they have the answer to your questions.</p>
 	
-	<p><b>Scaling interviews</b></p>
-		<ul>
-			<li>Individual contributors are interviewing, and they are interviewing often – individual contributors tend to YOLO it, they have a hard time accepting the structured interview philosophy.</li>
-			<li>Managers may not interview their new hires – this is something that is difficult to explain to managers.</li>
-		</ul>
+		<p><b>Scaling interviews</b></p>
+			<ul>
+				<li>Individual contributors are interviewing, and they are interviewing often – individual contributors tend to YOLO it, they have a hard time accepting the structured interview philosophy.</li>
+				<li>Managers may not interview their new hires – this is something that is difficult to explain to managers.</li>
+			</ul>
 
-	<p><h3>📃 Recruiting is not only about having great recruiters<br>
-	🎤 Alison Vannier - Lead R&D Recruiter at Datadog</h3></p><br>
+		<p><h3>📃 Recruiting is not only about having great recruiters<br>
+		🎤 Alison Vannier - Lead R&D Recruiter at Datadog</h3></p><br>
 
-	<p>Datadog is a SaaS based monitoring platform, bringing data from different sources to make the data more visible for the client. 1200 people, 200 people in Paris, 20 location. <br>
-	Recruiting is not only words, tools, processes, it is not only about having great Recruiters. Marketing, Coordinators, Human Resources… These stakeholders impact the recruiting process.</p>
+		<p>Datadog is a SaaS based monitoring platform, bringing data from different sources to make the data more visible for the client. 1200 people, 200 people in Paris, 20 location. <br>
+		Recruiting is not only words, tools, processes, it is not only about having great Recruiters. Marketing, Coordinators, Human Resources… These stakeholders impact the recruiting process.</p>
 	
-	<p><b>Early stage:</b></p>
-		<ul>
-			<li>Recruiting is the responsibility of the whole company. Finding people at different life stage of the company is the responsibility of the people of the company, from the early stage to the IPO. </li>
-			<li>“Bad ass session” at Datadog to help grow the sourcing pipeline when recruiters encounter issues building the pipeline. </li
-			<li>The first Recruiter did not take paid time off for 2 years.</li>
-		</ul>
+		<p><b>Early stage:</b></p>
+			<ul>
+				<li>Recruiting is the responsibility of the whole company. Finding people at different life stage of the company is the responsibility of the people of the company, from the early stage to the IPO. </li>
+				<li>“Bad ass session” at Datadog to help grow the sourcing pipeline when recruiters encounter issues building the pipeline. </li
+				<li>The first Recruiter did not take paid time off for 2 years.</li>
+			</ul>
 	
-	<p><b>Mid stage:</b></p>
-		<ul>
-			<li>Growing the team,</li>
-			<li>Recruiting recruiters</li>
-		</ul>
+		<p><b>Mid stage:</b></p>
+			<ul>
+				<li>Growing the team,</li>
+				<li>Recruiting recruiters</li>
+			</ul>
 	
-	<p><b>Scalability:</b></p>
-		<ul>
-			<li>Creating reports, documentations, analytics</li>
-			<li>Stakeholders know when it is the right time set up interviews etc.</li>
-		</ul>
+		<p><b>Scalability:</b></p>
+			<ul>
+				<li>Creating reports, documentations, analytics</li>
+				<li>Stakeholders know when it is the right time set up interviews etc.</li>
+			</ul>
 	
-	<p><i>Recruiting is not all about having great recruiters… but come on, it helps, right? – Alison Vannier</i></p>
+		<p><i>Recruiting is not all about having great recruiters… but come on, it helps, right? – Alison Vannier</i></p><br>
 
-	<p><h3>📃 Building a high performing TA team<br>
-	🎤 Nate Phelps, Senior Director Global S&O TA at Criteo</h3></p>
+		<p><h3>📃 Building a high performing TA team<br>
+		🎤 Nate Phelps, Senior Director Global S&O TA at Criteo</h3></p>
 	
-	<p>Nate lived in 4 different countries: Sidney, London, Singapore, and now Paris. <br>
-	Nate wore a lot of hats in HR: HR consulting, total rewards, recruiting, mobility… <br>
-	Nate is looking for everything wich is not related to technology at Criteo: Sales, Operations, Creative Services, Global Services, Finance, Procurement, People… </p>
+		<p>Nate lived in 4 different countries: Sidney, London, Singapore, and now Paris. <br>
+		Nate wore a lot of hats in HR: HR consulting, total rewards, recruiting, mobility… <br>
+		Nate is looking for everything wich is not related to technology at Criteo: Sales, Operations, Creative Services, Global Services, Finance, Procurement, People… </p>
 	
-	<p><b>Nate’s Team: </b></p>
-		<ul>
-			<li>31 Recruiters and Talent Acquisition Ops</li>
-			<li>6 TA hubs worldwide</li>
-			<li>800+ hired in 2018 for the commercial part of the business</li>
-			<li>110%: team productivity as % YTD</li>
-		</ul>
+		<p><b>Nate’s Team: </b></p>
+			<ul>
+				<li>31 Recruiters and Talent Acquisition Ops</li>
+				<li>6 TA hubs worldwide</li>
+				<li>800+ hired in 2018 for the commercial part of the business</li>
+				<li>110%: team productivity as % YTD</li>
+			</ul>
 	
-	<p>Performance is important to Nate because he worked in several organizations, all size. How do we quantify performance? Mostly checking “output”. Some organization define performance as volume (how many people did you hired?), as speed (how fast did you recruit people?), and some as quality. Nate never found a company that combined these 3 aspects. <br>
-	To Nate, it really comes down to the input. Empowerment, accountability and recognition. <br>
-		<ul>
-			<li>More empowerment ==> volume</li>
-			<li>More accountability ==> speed</li>
-			<li>More recognition ==> quality</li>
-		</ul>
+		<p>Performance is important to Nate because he worked in several organizations, all size. How do we quantify performance? Mostly checking “output”. Some organization define performance as volume (how many people did you hired?), as speed (how fast did you recruit people?), and some as quality. Nate never found a company that combined these 3 aspects. <br>
+		To Nate, it really comes down to the input. Empowerment, accountability and recognition. <br>
+			<ul>
+				<li>More empowerment ==> volume</li>
+				<li>More accountability ==> speed</li>
+				<li>More recognition ==> quality</li>
+			</ul>
 	
-	<p>Nate joined Criteo in Singapore in 2016, it was crazy and chaotic. He experienced tremendous growth. The team needed to adopt a common language. They needed to leverage data to manage performance, and thus drive accountability. Finally, the team moved beyond core performance, thinking ‘above of beyond’. </p><br>
+		<p>Nate joined Criteo in Singapore in 2016, it was crazy and chaotic. He experienced tremendous growth. The team needed to adopt a common language. They needed to leverage data to manage performance, and thus drive accountability. Finally, the team moved beyond core performance, thinking ‘above of beyond’. </p><br>
 	
-	<i>“A Recruitment team speaks to more people outside of the company than a Marketing team does” </i><br>
+		<i>“A Recruitment team speaks to more people outside of the company than a Marketing team does” </i><br>
 	
-	<p><b>Empower the team</b></p>
+		<p><b>Empower the team</b></p>
 		<ul>
 			<li>Consult – talk to your customers – what do they want? </li>
 			<li>Inform – use your experience – what do you know needs to change?</li>
 			<li>Engage – involve your Recruiters – what is their perspective from the front line?</li>
 			<li>Agree – alignment is important – validate your approach with the team to ensure commitment</li>
 			<li>Manage – hold people accountable – no consequences = no incentive to change </li>	
-	</ul>
+		</ul>
 	
-	<p><b>Manage Performance > Drive Accountability</b></p>
-	<p>Criteo introduced Recruiter Scorecard. What volume of Recruiters do I have to have to deliver a reasonable volume and quality?</p>
+		<p><b>Manage Performance > Drive Accountability</b></p>
+		<p>Criteo introduced Recruiter Scorecard. What volume of Recruiters do I have to have to deliver a reasonable volume and quality?</p>
 	
-	<b>Scorecard content:</b>
-		<ul>
-			<li>Offers accepted</li>	
-			<li>Offers declined</li>	
-			<li>Offers declined </li>	
-			<li>Average time thorough pipeline</li>	 
-			<li>Average req time</li>	
-			<li>Average posting time to fill</li>	
-			<li>Source of hire</li>	
-			<li>Candidate experience survey</li>	
-			<li>Hiring manager survey</li>	
-			<li>LinkedIn Recruiter Index</li>	
-	</ul>
+		<b>Scorecard content:</b>
+			<ul>
+				<li>Offers accepted</li>	
+				<li>Offers declined</li>	
+				<li>Offers declined </li>	
+				<li>Average time thorough pipeline</li>	 
+				<li>Average req time</li>	
+				<li>Average posting time to fill</li>	
+				<li>Source of hire</li>	
+				<li>Candidate experience survey</li>	
+				<li>Hiring manager survey</li>	
+				<li>LinkedIn Recruiter Index</li>	
+		</ul>
 
-	<p>It is not black or white, there is a fair use of the dashboard and a deep understanding of the amount of work of each Recruiter. </p>
+		<p>It is not black or white, there is a fair use of the dashboard and a deep understanding of the amount of work of each Recruiter. </p>
 	
 
-	<p><b>Evolve Behaviors > Adapt Recognition</b></p>
-	<b>Early stage: </b>
-	<ul>
-		<li>Direct response to behaviors,</li>
-		<li>Visible and frequent,</li>
-		<li>Immediate,</li>
-		<li>Material recognition,</li>
-	</ul>
+		<p><b>Evolve Behaviors > Adapt Recognition</b></p>
+		<b>Early stage: </b>
+			<ul>
+				<li>Direct response to behaviors,</li>
+				<li>Visible and frequent,</li>
+				<li>Immediate,</li>
+				<li>Material recognition,</li>
+			</ul>
 	
-	<b>Mature stage:</b>
-	<ul>
-		<li>Reflect outcome of changed behaviors,</li>
-		<li>Visible and frequent,</li>
-		<li>Soft recognition (development, career opportunities…),</li>
-	</ul>
+		<b>Mature stage:</b>
+			<ul>
+				<li>Reflect outcome of changed behaviors,</li>
+				<li>Visible and frequent,</li>
+				<li>Soft recognition (development, career opportunities…),</li>
+			</ul>
 
 
 	
