--- a/recap-tarw3-meetup.html
+++ b/recap-tarw3-meetup.html
@@ -32,7 +32,7 @@
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-              <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+             						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
 
@@ -48,7 +48,7 @@
 									<p><br /></p>
                   
 								</header>
-								<div class="image main"><img src="images/empty-chair.jpg" alt="" /></div>
+								<div class="image main"><img src="images/conference.jpg" alt="" /></div>
 		<p><h3>📃 Sell vs. test: who's interviewing who?<br>
 		🎤 Alison Eastaway - Head of Talent Acquisition at Sqreen</h3></p><br />
 
