--- a/recap-tarw3-meetup.html
+++ b/recap-tarw3-meetup.html
@@ -132,7 +132,7 @@
 		<p>(source: Schmidt & Hunter analysis, 1998)</p>
 
 		<p><b>Criteo tries to have interviews rounds that make sense </b></p>
-		<p><b>Structured interviews:<b/> behavioral questions (tell me about a time when you had to…?) and situational questions (what would you do if…?)</p>
+		<p><b>Structured interviews:</b> behavioral questions (tell me about a time when you had to…?) and situational questions (what would you do if…?)</p>
 			<ul>
 				<li>Consistent across interviews</li>
 				<li>Reduced bias</li>
@@ -145,6 +145,7 @@
 				<li>Individual contributors are interviewing, and they are interviewing often – individual contributors tend to YOLO it, they have a hard time accepting the structured interview philosophy.</li>
 				<li>Managers may not interview their new hires – this is something that is difficult to explain to managers.</li>
 			</ul>
+			<br>
 
 		<p><h3>📃 Recruiting is not only about having great recruiters<br>
 		🎤 Alison Vannier - Lead R&D Recruiter at Datadog</h3></p><br>
