--- a/recap-tarw3-meetup.html
+++ b/recap-tarw3-meetup.html
@@ -255,14 +255,11 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-	
-						<section class="split contact">
-
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-LinkedIn"><span class="label">LinkedIn</span></a></li>
+									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
