--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">Sept 22, 2019</span>
+										<h2><a href="#">#TARW3 MEETUP RECAP</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/conference.jpg" alt="" /></a>
+									<p>Hosted at Criteo on September 19th, 2019. Speakers were Recruiters and Hiring managers, let's discover their stories. </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="recap-tarw3-meetup.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
