--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 										<h2><a href="#">#TARW3 MEETUP RECAP</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/conference.jpg" alt="" /></a>
-									<p>Hosted at Criteo on September 19th, 2019. Speakers were Recruiters and Hiring managers, let's discover their stories. </p>
+									<p>Hosted at Criteo on September 2019.<br>
+									Speakers were Recruiters and Hiring managers, let's discover their stories! </p>
 									<ul class="actions special">
 										<li><a href="recap-tarw3-meetup.html" class="button">Full Story</a></li>
 									</ul>
