--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">2019</span>
-									<h2><a href="#">Creating a website<br />
+									<h2><a href="creating-a-website-from-scratch.html">Creating a website<br />
 									from scratch</a></h2>
 									<p>One day I woke up asking myself if I could create a website from scratch.<br />
 									I got on my keyboard and started typing.<br />
@@ -70,8 +70,8 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">Sept 22, 2019</span>
-										<h2><a href="#">#TARW3 MEETUP RECAP</a></h2>
+										<span class="date">2019</span>
+										<h2><a href="recap-tarw3-meetup.html">#TARW3 MEETUP RECAP</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/conference.jpg" alt="" /></a>
 									<p>Hosted at Criteo on September 2019.<br>
@@ -82,14 +82,14 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">2019</span>
+										<h2><a href="sourcecon-paris-episode-3.html">#SOURCECON PARIS:<br />
+										SOURCING HEALTH CHECK</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/sourcecon-paris.jpg" alt="" /></a>
+									<p>3rd edition of SourceCon Paris Chapter Meetup, we are lucky to be hosted at Doctolib in Paris for a quick Health Check of French Sourcing Culture</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="sourcecon-paris-episode-3.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
