--- a/sourcecon-paris-episode-3.html
+++ b/sourcecon-paris-episode-3.html
@@ -47,7 +47,7 @@
 									Sourcing Health Check</h1>
 									<p>3rd edition of SourceCon Paris Chapter Meetup, we are lucky to be hosted at Doctolib in Paris for a quick Health Check of French Sourcing Culture<br /></p>
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="images/sourcecon-paris.jpg" alt="" /></div>
 								
                 <p><b>Introduction:</b> Rassam explained how he hired Tris as Global Sourcing Manager – it is all about seizing the opportunity in front of you.</p>
 	
