--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									I got on my keyboard and started typing.<br />
 									The result isn’t disappointing.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/Code.jpeg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/code.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="creating-a-website-from-scratch.html" class="button large">Full Story</a></li>
 								</ul>
