--- a/recap-tarw3-meetup.html
+++ b/recap-tarw3-meetup.html
@@ -50,6 +50,10 @@
                   
 								</header>
 								<div class="image main"><img src="images/conference.jpg" alt="" /></div>
+		
+		<p>Criteo hosted the 3rd edition of its "Talent Acquisition in the Real World" meetup, with awesome speakers talking about fascinating topics - as always. Thanks for contributing so much to the Talent Acquisition ecosystem in Paris!</p>
+		<p>Here is a recap about what has been said this evening, powerful ideas and great punchlines :)</p>
+								
 		<p><h3>📃 Sell vs. test: who's interviewing who?<br>
 		🎤 Alison Eastaway - Head of Talent Acquisition at Sqreen</h3></p><br />
 
