--- a/sourcecon-paris-episode-3.html
+++ b/sourcecon-paris-episode-3.html
@@ -49,7 +49,11 @@
 								</header>
 								<div class="image main"><img src="images/sourcecon-paris.jpg" alt="" /></div>
 								
-                <p><b>Introduction:</b> Rassam explained how he hired Tris as Global Sourcing Manager – it is all about seizing the opportunity in front of you.</p>
+                <p>Doctolib hosted the 3rd session of #SourceCon in Paris. After the first chapter at Algolia, and the 2nd chapter at Station F, Tris Revill and Rassam Yaghmaei opened Doctolib's doors to paris' Recruiters and Sourcers, so we can all share a great moment discussing the state of Sourcing in France - and even in Switzerland!</p>
+		<p>Thank you Doctolib for hosting this great event, and obviously, thank you Tris and Rassam for putting so much energy in growing the SourceCon community in France. You guys are doing an amazing work!</p>
+		<p>Below, you will find a recap about what have been said and done at Doctolib during the event - have a great time reading the article!</p>
+		
+		<p><b>Introduction:</b> Rassam explained how he hired Tris as Global Sourcing Manager – it is all about seizing the opportunity in front of you.</p>
 	
   <hr />							
                 
