--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 								<article>
 									<header>
 										<span class="date">2019</span>
-										<h2><a href="recap-tarw3-meetup.html">#TARW3 MEETUP RECAP</a></h2>
+										<h2><a href="recap-tarw3-meetup.html">#TARW: <br />
+										MEETUP RECAP</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/conference.jpg" alt="" /></a>
 									<p>Hosted at Criteo on September 2019.<br>
