--- a/about-me.html
+++ b/about-me.html
@@ -54,19 +54,19 @@
 <hr />
            
                 <p><b><h3>Let’s speak with emojis… I am:</h3></b></p>
-<p>   😍    Passionate about Talent Acquisition</p>
-<p>   🧙    Doing weird sourcing stuffs for fun</p>
-<p>   🐙    A multitasker</p>
-<p>   🚀    Fond of tech, startups, and innovation</p>
-<p>   ✏️    Interested in education, pedagogy and learning mechanisms</p>
-<p>   🧔    Beardy</p>
-<p>   🤙    Riding all kinds of boards: 🏄 ⛷️ 🏂 …</p>
-<p>   🎸    A self-taught guitarist</p>
-<p>   🏔️   Born and raised in the Alps</p>
-<p>   🍫    Addicted to chocolate</p>
-<p>   🥢    Always in for Chinese food</p>
-<p>   🤲    Working for a charity involved in the improvement of health and education in Nepal</p>
-<p>
+<p>😍    Passionate about Talent Acquisition<br>
+🧙    Doing weird sourcing stuffs for fun<br>
+🐙    A multitasker<br>
+🚀    Fond of tech, startups, and innovation<br>
+✏️    Interested in education, pedagogy and learning mechanisms<br>
+🧔    Beardy<br>
+🤙    Riding all kinds of boards: 🏄 ⛷️ 🏂 …<br>
+🎸    A self-taught guitarist<br>
+🏔️   Born and raised in the Alps<br>
+🍫    Addicted to chocolate<br>
+🥢    Always in for Chinese food<br>
+🤲    Working for a charity involved in the improvement of health and education in Nepal<br></p>
+
 <br>
 <hr />
 
