--- a/index.html
+++ b/index.html
@@ -53,16 +53,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">2019</span>
-									<h2><a href="creating-a-website-from-scratch.html">Creating a website<br />
-									from scratch</a></h2>
-									<p>One day I woke up asking myself if I could create a website from scratch.<br />
-									I got on my keyboard and started typing.<br />
-									The result isn’t disappointing.</p>
+									<span class="date">Ma keynote en vidéo</span>
+									<h2><a href="https://youtu.be/QNzMM3bL7js">RECRUTER 200 PERSONNES<br />
+									AVEC 3 RECRUTEURS</a></h2>
+									<p>Retour en vidéo sur plusieurs mois d’expérimentations en recrutement : revaloriser le sourcing en entreprise, responsabiliser les managers, donner un nouvel élan à une équipe de recrutement essoufflée.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/code.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/francois-tru.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="creating-a-website-from-scratch.html" class="button large">Full Story</a></li>
+									<li><a href="https://youtu.be/QNzMM3bL7js" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
@@ -103,9 +101,7 @@
 										FROM SCRATCH</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/code.jpg" alt="" /></a>
-									<p>One day I woke up asking myself if I could create a website from scratch.<br />
-									I got on my keyboard and started typing.<br />
-									The result isn’t disappointing.</p>
+									<p>One day I woke up asking myself if I could create a website from scratch. I got on my keyboard and started typing. The result isn’t disappointing.</p>
 									<ul class="actions special">
 										<li><a href="creating-a-website-from-scratch.html" class="button">Full Story</a></li>
 									</ul>
