--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 								<article>
 									<header>
 										<span class="date">2016</span>
-										<h2><a href="https://www.linkedin.com/pulse/int%C3%A9gration-100-d%C3%A9parts-0-francois-gauthier/"INTEGRATION 100%, DEPARTS 0%</a></h2>
+										<h2><a href="https://www.linkedin.com/pulse/int%C3%A9gration-100-d%C3%A9parts-0-francois-gauthier/">INTEGRATION 100%, DEPARTS 0%</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/evolution.jpg" alt="" /></a>
 									<p>Peu de budget et beaucoup d’idées : c’est la recette (réussie) de l’onboarding chez Talentsoft. Grâce à ses processus d’intégration, Talentsoft garde son taux de rupture de périodes d’essai en dessous de 3% !</p>
@@ -198,7 +198,7 @@
 								<article>
 									<header>
 										<span class="date">2016</span>
-										<h2><a href="https://www.linkedin.com/pulse/o%C3%B9-trouver-la-cinqui%C3%A8me-patte-du-mouton-francois-gauthier/"OU TROUVER LA CINQUIEME PATTE DU MOUTON ?</a></h2>
+										<h2><a href="https://www.linkedin.com/pulse/o%C3%B9-trouver-la-cinqui%C3%A8me-patte-du-mouton-francois-gauthier/">OU TROUVER LA CINQUIEME PATTE DU MOUTON ?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/mouton.jpg" alt="" /></a>
 									<p>Maitriser les hard skills, c’est bien… Maitriser les soft skills, c’est mieux ! Je partage avec vous une solution mise en place chez Talentsoft pour recruter des profils qui « arrachent la moquette ».</p>
