--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">Ma keynote en vidéo</span>
-									<h2><a href="https://youtu.be/QNzMM3bL7js">RECRUTER 200 PERSONNES<br />
+									<h2><a href="https://francoisrh.github.io/trusourcing-keynote.html">RECRUTER 200 PERSONNES<br />
 									AVEC 3 RECRUTEURS</a></h2>
 									<p>Retour en vidéo sur plusieurs mois d’expérimentations en recrutement : revaloriser le sourcing en entreprise, responsabiliser les managers, donner un nouvel élan à une équipe de recrutement essoufflée.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/francois-tru.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://youtu.be/QNzMM3bL7js" class="button large">Full Story</a></li>
+									<li><a href="https://francoisrh.github.io/trusourcing-keynote.html" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
