--- a/google-cse.html
+++ b/google-cse.html
@@ -47,7 +47,7 @@
 									CUSTOM SEARCH ENGINES</h1>
 									<p>Mad props to Pierre-André Fortin, as known as 3615 PAFORTIN, for helping me setting up my very first customized search engines.</p>
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="images/google-cse.jpg" alt="" /></div>
 								<p>As a Recruiter, and moreover as a Sourcer, I always look for automation, improvements and efficiency. I recently took a lesson with Pierre-André to set up my very first Google Custom Search Engines, to perform X-rays in an efficient way. I’m sharing some of my CSE with you:
                 <ul>
                   <li><a href="https://cse.google.com/cse?cx=017973545503014220114:yew4ujw8ipp">LinkedIn Profiles</a></li>
