--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<header>
 										<span class="date">2019</span>
 										<h2><a href="google-cse.html">MY FIRST GOOGLE <br />
-										CUSTOM SEARCH ENGINE/a></h2>
+										CUSTOM SEARCH ENGINE</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/google-cse.jpg" alt="" /></a>
 									<p>Mad props to Pierre-André Fortin, as known as 3615 PAFORTIN, for helping me setting up my very first customized search engines.</p>
