--- a/google-cse.html
+++ b/google-cse.html
@@ -54,6 +54,8 @@
                   <li><a href="https://cse.google.com/cse?cx=017973545503014220114:gvnkve7uk2k">Stackoverflow CV</a></li>
                   <li><a href="https://cse.google.com/cse?cx=017973545503014220114:e9ahvtc50ab">Doyoubuzz CV</a></li>
                   <li><a href="https://cse.google.com/cse?cx=017973545503014220114:nazeltejn2p">PocketGamer profiles</a></li>
+                  <li><a href="https://cse.google.com/cse?cx=017973545503014220114:xi8owfrcla9">Mobygames profiles</a></li>
+                  <li><a href="https://cse.google.com/cse?cx=017973545503014220114:80brvfokcaz">Mobygames games</a></li>
                 </ul>
                 
                 
