--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
 								<article>
 									<header>
 										<span class="date">2018</span>
-										<h2><a href="https://youtu.be/QNzMM3bL7js">RECRUTER 200 PERSONNES<br />
+										<h2><a href="trusourcing-keynote.html">RECRUTER 200 PERSONNES<br />
 										AVEC 3 RECRUTEURS</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/francois-tru.jpg" alt="" /></a>
 									<p>Retour en vidéo sur plusieurs mois d’expérimentations en recrutement : revaloriser le sourcing en entreprise, responsabiliser les managers, donner un nouvel élan à une équipe de recrutement essoufflée.</p>
 									<ul class="actions special">
-										<li><a href="https://youtu.be/QNzMM3bL7js" class="button">Full Story</a></li>
+										<li><a href="trusourcing-keynote.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								
