--- a/mon-premier-hackathon.html
+++ b/mon-premier-hackathon.html
@@ -51,7 +51,7 @@
 								</header>
 								<div class="image main"><img src="images/Hackathon.jpeg" alt="" /></div>
 								<p>Le temps d’un weekend, j’ai mêlé l’utile à l’agréable. Ça faisait longtemps que je souhaiter créer un outil qui serait utile à tous les Recruteurs, pour les aider dans leur travail au quotidien. Quand Talentsoft a annoncé la tenue d’un hackathon interne, j’ai trouvé un binôme et j’ai vécu une aventure humaine hors-norme, pendant 48 heures. C’était l’occasion que j’attendais depuis longtemps, l’occasion d’apporter ma (modeste) pierre à l’édifice du Recrutement, tous en apprenant et en m’amusant. </p>
-<p>Pendant 48h, en binôme avec Clément Folliet, j’ai conçu, créé et pitché un outil qui prérempli les champs des offres d’emploi sur les job boards – fini, les copier-coller interminables ! Nous avons réussi à sortir un MVP (Minimum Viable Product) fonctionnel, et Talentsoft a même envisagé sérieusement à développer l’outil pour le commercialiser – ce projet n’a finalement jamais vu le jour. </p>
+								<p>Pendant 48h, en binôme avec <a href="https://www.linkedin.com/in/cfolliet/">Clément Folliet</a>, j’ai conçu, créé et pitché un outil qui prérempli les champs des offres d’emploi sur les job boards – fini, les copier-coller interminables ! Nous avons réussi à sortir un MVP (Minimum Viable Product) fonctionnel, et Talentsoft a même envisagé sérieusement à développer l’outil pour le commercialiser – ce projet n’a finalement jamais vu le jour. </p>
 <p>Retrouvez mon article sur le hackathon sur Medium : <a href="https://techlife.talentsoft.com/mon-premier-hackathon-ba352d952540"><b>Article sur Medium</b></a></p>
 
 							</section>
