--- a/about-me.html
+++ b/about-me.html
@@ -45,7 +45,7 @@
 									<span class="date">2019</span>
 									<h1>Hi, I'm François<br /></h1>
 								</header>
-								<div class="image main"><img src="images/francois-tru.jpg" alt="" /></div>
+								<div class="image main"><img src="images/francois-lcdr.jpg" alt="" /></div>
 								
                 <p>Hi, I’m François.<br>
                 I am a tech-savvy Talent Acquisition professional, working at Ubisoft in Paris, France.<br>
