--- a/index.html
+++ b/index.html
@@ -53,14 +53,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Ma keynote en vidéo</span>
-									<h2><a href="https://francoisrh.github.io/trusourcing-keynote.html">RECRUTER 200 PERSONNES<br />
-									AVEC 3 RECRUTEURS</a></h2>
-									<p>Retour en vidéo sur plusieurs mois d’expérimentations en recrutement : revaloriser le sourcing en entreprise, responsabiliser les managers, donner un nouvel élan à une équipe de recrutement essoufflée.</p>
+									<span class="date">2020</span>
+									<h2><a href="keynote-lcdr.html">QUELQUES ASTUCES POUR RENDRE VOS APPROCHES EFFICACES</a></h2>
+									<p>J'ai pris la parole lors de la première edition de La Conférence Du Recrutement (#LCDR), et bien-sûr ça parle de sourcing ! Retrouvez ma keynote en vidéo 🙂</p>
 								</header>
-								<a href="trusourcing-keynote.html" class="image main"><img src="images/francois-tru.jpg" alt="" /></a>
+								<a href="keynote-lcdr.html" class="image main"><img src="images/keynote-lcdr2.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://francoisrh.github.io/trusourcing-keynote.html" class="button large">Full Story</a></li>
+									<li><a href="keynote-lcdr.html" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
