--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>François Gauthier<br />
-						360° Recruiter</h1>
-						<p>Passionate about Recruitment & Tech</a><br />
-						Gotta catch 'em all</a></p>
+						<h1>François Gauthier's<br />
+						Portfolio</h1>
+						<p>360° Recruiter. <br /></a>
+						Passionate about Recruitment & Tech.<br /></a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
