--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="intro">
 						<h1>François Gauthier's<br />
 						Portfolio</h1>
-						<p>360° Recruiter. <br /></a>
-						Passionate about Recruitment & Tech.<br /></a></p>
+						<p>360° Recruiter <br /></a>
+						Passionate about Recruitment & Tech<br /></a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -55,7 +55,8 @@
 								<header class="major">
 									<span class="date">2020</span>
 									<h2><a href="keynote-lcdr.html">QUELQUES ASTUCES POUR RENDRE VOS APPROCHES EFFICACES</a></h2>
-									<p>J'ai pris la parole lors de la première edition de La Conférence Du Recrutement (#LCDR), et bien-sûr ça parle de sourcing ! Retrouvez ma keynote en vidéo 🙂</p>
+									<p>J'ai pris la parole lors de la première edition de La Conférence Du Recrutement (#LCDR), et bien-sûr ça parle de sourcing ! <br /> 
+									Retrouvez ma keynote en vidéo, et un article récapitulatif </p>
 								</header>
 								<a href="keynote-lcdr.html" class="image main"><img src="images/keynote-lcdr2.jpg" alt="" /></a>
 								<ul class="actions special">
