--- a/keynote-lcdr.html
+++ b/keynote-lcdr.html
@@ -69,7 +69,7 @@
                     <p>🙋‍♂️ <b>Astuce #8</b> : Parler de la personne que vous targettez, plutôt que de parler de vous dans vos messages d’approche ! </p>
 		
 		<br />
-		<p><h5>Envie d’en savoir plus ?</H5></p>
+		<p><h2>Envie d’en savoir plus ?</h2></p>
 		<ul>
 			<li><p>J'ai écrit un (long) résumé et l’ai publié sur le blog de <b>L’Ecole Du Recrutement</b> (LEDR), il est disponible ici 👉 <a href="https://lecoledurecrutement.fr/6-conseils-pour-un-sourcing-plus-efficace/">6 Conseils Pour Un Sourcing Plus Efficace</a> </p></li>
 			<li><p><b>Amélie Collinet</b>, Freelance Recruiter, a écrit un billet sur son <a href="https://www.newpromise.fr/blog">blog</a>, il est disponible ici 👉 <a href="https://www.newpromise.fr/post/rendre-tes-approches-candidats-plus-efficaces-en-une-journ%C3%A9e-et-pour-0-euros">Rendre tes approches candidats plus efficaces en une journée et pour 0 euros !</a></p></li>
