--- a/keynote-lcdr.html
+++ b/keynote-lcdr.html
@@ -58,15 +58,17 @@
                 
 		<br />
 								
-                <p><b>En quelques mots, voici le résumé de la keynote : </b></p>
-                    <p>📅 <b>Astuce #1</b> : Bloquer du temps dans son agenda, du temps dédié au sourcing, pour que la chasse ne soit pas le dernier point de votre to-do list – le point que vous remettez toujours au lendemain ! </p>
-                    <p>🎈 <b>Astuce #2</b> : Rendez le sourcing fun, en organisant des sourcing jams. Le principe est simple : tous les Recruteurs chassent en même temps sur un même brief pour constituer une longlist ! </p>
-                    <p>🍬 <b>Astuce #3</b> : Alimenter un vivier de talents, pour ne pas chasser en permanence, mais pour recontacter d’anciens candidats talentueux que l’on n’avait pas pu embaucher une première fois, </p>
-                    <p>🔁 <b>Astuce #4</b> : Re-lan-cer systématiquement les profils contactés, pour multiplier par 2 ou 3 ses taux de retours sur approche directe, </p>
-                    <p>📜 <b>Astuce #5</b> : Personnaliser ses approches, pour rendre le contact plus humain, </p>
-                    <p>🧠 <b>Astuce #6</b> : Utiliser les biais cognitifs pour conditionner les gens à vous dire « oui », </p>
-                    <p>💥 <b>Astuce #7</b> : Créer de l’émotion (confiance, connivence, surprise…) pour hameçonner l’attention de votre cible, </p>
-                    <p>🙋‍♂️ <b>Astuce #8</b> : Parler de la personne que vous targettez, plutôt que de parler de vous dans vos messages d’approche ! </p>
+		<h3>En quelques mots, voici le résumé de la keynote :</h3>
+											<ul class="alt">
+												<li>📅 <b>Astuce #1</b> : Bloquer du temps dans son agenda, du temps dédié au sourcing, pour que la chasse ne soit pas le dernier point de votre to-do list – le point que vous remettez toujours au lendemain !</li>
+												<li>🎈 <b>Astuce #2</b> : Rendez le sourcing fun, en organisant des sourcing jams. Le principe est simple : tous les Recruteurs chassent en même temps sur un même brief pour constituer une longlist !</li>
+												<li>🍬 <b>Astuce #3</b> : Alimenter un vivier de talents, pour ne pas chasser en permanence, mais pour recontacter d’anciens candidats talentueux que l’on n’avait pas pu embaucher une première fois,</li>
+												<li>🔁 Astuce #4</b> : Re-lan-cer systématiquement les profils contactés, pour multiplier par 2 ou 3 ses taux de retours sur approche directe, </li>
+												<li>📜 <b>Astuce #5</b> : Personnaliser ses approches, pour rendre le contact plus humain, </li>
+												<li>🧠 <b>Astuce #6</b> : Utiliser les biais cognitifs pour conditionner les gens à vous dire « oui »,</li>
+												<li>💥 <b>Astuce #7</b> : Créer de l’émotion (confiance, connivence, surprise…) pour hameçonner l’attention de votre cible,</li>
+												<li>🙋‍♂️ <b>Astuce #8</b> : Parler de la personne que vous targettez, plutôt que de parler de vous dans vos messages d’approche ! </li>
+											</ul>			
 		
 		<br />
 		<p><h2>Envie d’en savoir plus ?</h2></p>
