--- a/keynote-lcdr.html
+++ b/keynote-lcdr.html
@@ -90,7 +90,7 @@
 		<div class="row">
 			<div class="col-6 col-12-small">
 				<ul class="actions stacked">
-					<li><a href="https://www.newpromise.fr/post/rendre-tes-approches-candidats-plus-efficaces-en-une-journ%C3%A9e-et-pour-0-euros" class="button fit">LIRE L'ARTICLE SUR LE BLOG D'AMELIE COLLINET</a></li>
+					<li><a href="https://www.newpromise.fr/post/rendre-tes-approches-candidats-plus-efficaces-en-une-journ%C3%A9e-et-pour-0-euros" class="button primary fit">LIRE L'ARTICLE SUR LE BLOG D'AMELIE COLLINET</a></li>
 				</ul>
 		</div>
 		
