--- a/keynote-lcdr.html
+++ b/keynote-lcdr.html
@@ -76,23 +76,20 @@
 		
 		<br />
 		<p><h2>Envie d’en savoir plus ?</h2></p>
-		<p>J'ai écrit un (long) résumé et l’ai publié sur le blog de <b>L’Ecole Du Recrutement</b> (LEDR), il est disponible ici 👇
+		<p>J'ai écrit un (long) résumé et l’ai publié sur le blog de <b>L’Ecole Du Recrutement</b> (LEDR), il est disponible ici 👇</p>
+		<p><b>Amélie Collinet</b>, Freelance Recruiter, a écrit un billet sur son <a href="https://www.newpromise.fr/blog">blog</a>, il est disponible ici 👇</p>
 		<br />
 			<div class="row">
 			<div class="col-6 col-12-small">
 				<ul class="actions stacked">
 					<li><a href="https://lecoledurecrutement.fr/6-conseils-pour-un-sourcing-plus-efficace/" class="button primary fit">LIRE L'ARTICLE SUR LE BLOG DE LEDR</a></li>
-				</ul>
-			</div>
-		<br />
-		<p><b>Amélie Collinet</b>, Freelance Recruiter, a écrit un billet sur son <a href="https://www.newpromise.fr/blog">blog</a>, il est disponible ici 👇
-		<br />
-			<div class="row">
-			<div class="col-6 col-12-small">
-				<ul class="actions stacked">
 					<li><a href="https://www.newpromise.fr/post/rendre-tes-approches-candidats-plus-efficaces-en-une-journ%C3%A9e-et-pour-0-euros" class="button primary fit">LIRE L'ARTICLE SUR LE BLOG D'AMELIE</a></li>
 				</ul>
 			</div>
+		<br />
+			<p><b>Bonne lecture !</b></p>
+		<br />
+		
 		<br />
 		
 		<br />
