--- a/keynote-lcdr.html
+++ b/keynote-lcdr.html
@@ -76,8 +76,8 @@
 		
 		<br />
 		<p><h2>Envie d’en savoir plus ?</h2></p>
-		<p>J'ai écrit un (long) résumé et l’ai publié sur le blog de <b>L’Ecole Du Recrutement</b> (LEDR), il est disponible ici 👇</p>
-		<p><b>Amélie Collinet</b>, Freelance Recruiter, a écrit un billet sur son <a href="https://www.newpromise.fr/blog">blog</a>, il est disponible ici 👇</p>
+		<p>J'ai écrit un (long) résumé et l’ai publié sur le blog de <b>L’Ecole Du Recrutement</b> (LEDR), il est disponible ci-dessous 👇</p>
+		<p><b>Amélie Collinet</b>, Freelance Recruiter, a écrit un billet sur son <a href="https://www.newpromise.fr/blog">blog</a>, il est disponible ci-dessous 👇</p>
 		<br />
 			<div class="row">
 			<div class="col-6 col-12-small">
@@ -87,7 +87,6 @@
 				</ul>
 			</div>
 		<br />
-			<p><b>Bonne lecture !</b></p>
 		<br />
 		
 		<br />
