--- a/cv.html
+++ b/cv.html
@@ -25,8 +25,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Blog</a></li>
-							<li><a href="lets-work-together.html">Let's work together</a></li>
+							<li><a href="index.html">Blog</a></li>
+							<li class="active"><a href="lets-work-together.html">Let's work together</a></li>
 							<li><a href="about-me.html">About me</a></li>
 						</ul>
 						<ul class="icons">
@@ -48,7 +48,13 @@
 									C'est ici ! 👇<br /></p>
 								</header>
 								<div class="image main"><img src="images/Astronaut.jpg" alt="" /></div>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
+								<p>J'étudie les <b>Ressources Humaines</b> depuis 2010, je fais du <b>recrutement</b> depuis 2015, du <b>sourcing</b> depuis 2016, du <b>management</b> depuis 2017. 
+								J'ai travaillé dans le public et dans le privé, dans le service et dans l'industrie, en France et à l'étranger, dans des petites et des grosses boites.
+								J'ai été stagiaire, bénévole, salarié et freelance.
+								J'ai 5 ans d'expérience dans la #Tech, je manage des Recruteurs et j'aime la chasse. J'écris des articles. J'anime des webinars. Je fais des keynotes dans des conférences. Je tweet. <b>Je m'appelle François, je fais du recrutement, et j'aime ça.</b></p>
+								
+								<hr />
+								
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
 							</section>
 
