--- a/cv.html
+++ b/cv.html
@@ -51,7 +51,8 @@
 								<p>J'étudie les <b>Ressources Humaines</b> depuis 2010, je fais du <b>recrutement</b> depuis 2015, du <b>sourcing</b> depuis 2016, du <b>management</b> depuis 2017. 
 								J'ai travaillé dans le public et dans le privé, dans le service et dans l'industrie, en France et à l'étranger, dans des petites et des grosses boites.
 								J'ai été stagiaire, bénévole, salarié et freelance.
-								J'ai 5 ans d'expérience dans la #Tech, je manage des Recruteurs et j'aime la chasse. J'écris des articles. J'anime des webinars. Je fais des keynotes dans des conférences. Je tweet. <b>Je m'appelle François, je fais du recrutement, et j'aime ça.</b></p>
+								J'ai 5 ans d'expérience dans la <b>#Tech</b>, je manage des Recruteurs et j'aime la <b>chasse</b>. J'écris des articles. J'anime des webinars. Je fais des <b>keynotes</b> dans des conférences. Je tweet. <br />
+								<b>Je m'appelle François, je fais du recrutement, et j'aime ça.</b></p>
 								
 								<hr />
 								
