--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>TITLE OF THE PAGE</title>
+		<title>✨ CV François Gauthier ✨</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
