--- a/cv.html
+++ b/cv.html
@@ -57,8 +57,8 @@
 								<hr />
 								
 								<p><b>Compétences</b> : Recrutement, Sourcing, Pipelining, Market Mapping, Competitive Intelligence, Management d'équipe, Management de projets, Ressources Humaines, Gaming, Tech. <br />
-								<b>Langues</b> : Français : natif. Anglais : fluent. Booléen : fluent<br />
-								<b>Outils de recrutement</b> : ATS : Talentsoft, SmartRecruiters. CRM : Hello Talent, Huntool. Productivité : Trello, Calendly, Pack Office. Assessment : Codingame, AssessFirst, Codility. <br />
+								<b>Langues</b> : <br />Français : natif. <br />Anglais : fluent. <br />Booléen : fluent<br />
+								<b>Outils de recrutement</b> : <br />ATS : Talentsoft, SmartRecruiters. <br />CRM : Hello Talent, Huntool. <br />Productivité : Trello, Calendly, Pack Office. <br />Assessment : Codingame, AssessFirst, Codility. <br />
 								<b>Programmation</b> : HTML, compréhension des mécaniques de scraping.</p>
 								
 								<hr />
