--- a/recruiting-brainfood-tribune.html
+++ b/recruiting-brainfood-tribune.html
@@ -45,10 +45,10 @@
 									<span class="date">JANUARY 14, 2020</span>
 									<h1>MY TRIBUNE ON<br />
 									RECRUITING BRAINFOOD</h1>
-									<p>I do not share many personal stories… but here we go,my tribune was published on Recruiting Brainfood. Thank you, Hung Lee, for asking 20 questions!</p>
+									<p>I do not share many personal stories… but here we go, my tribune was published on Recruiting Brainfood. Thank you, Hung Lee, for asking 20 questions!</p>
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
-								<p>In this tribune we discuss #recruitment (obviously!), teamwork and mentors… but also introversion, gasoline, pandemic and Anakin Skywalker's daddy issues.</p>
+								<div class="image main"><img src="images/microphone.jpg" alt="" /></div>
+								<p>In this tribune we discuss recruitment (obviously!), teamwork and mentors… but also introversion, gasoline, pandemic and Anakin Skywalker's daddy issues.</p>
 								<p>Find the tribune <a href="https://www.recruitingbrainfood.com/the-brainfood-tribune/20-questions-with-francois-gauthier/">here</a></p>
 								<p>You aren’t part of the #RecruitingBrainfood community yet? Join us on <a href="https://www.recruitingbrainfood.com">recruitingbrainfood.com</a>, subscribe and contribute!</p>
 							</section>
