--- a/index.html
+++ b/index.html
@@ -67,7 +67,17 @@
 
 						<!-- Posts -->
 							<section class="posts">
-								
+								<article>
+									<header>
+										<span class="date">2020</span>
+										<h2><a href="keynote-lcdr.html">QUELQUES ASTUCES POUR RENDRE VOS APPROCHES EFFICACES</a></h2>
+									</header>
+									<a href="keynote-lcdr.html" class="image fit"><img src="images/keynote-lcdr2.jpg" alt="" /></a>
+									<p>J'ai pris la parole lors de la première edition de La Conférence Du Recrutement (#LCDR), et bien-sûr ça parle de sourcing ! Retrouvez ma keynote en vidéo, et un article récapitulatif </p>
+									<ul class="actions special">
+										<li><a href="keynote-lcdr.html" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">2019</span>
