--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">2020</span>
-									<h2><a href="keynote-lcdr.html">QUELQUES ASTUCES POUR RENDRE VOS APPROCHES EFFICACES</a></h2>
-									<p>J'ai pris la parole lors de la première edition de La Conférence Du Recrutement (#LCDR), et bien-sûr ça parle de sourcing ! <br /> 
-									Retrouvez ma keynote en vidéo, et un article récapitulatif </p>
+									<span class="date">2021</span>
+									<h2><a href="recruiting-brainfood-tribune.html">MY TRIBUNE ON RECRUITING BRAINFOOD</a></h2>
+									<p>I do not share many personal stories… but here we go, my tribune was published on Recruiting Brainfood. Thank you, Hung Lee, for asking 20 questions!</p>
 								</header>
-								<a href="keynote-lcdr.html" class="image main"><img src="images/keynote-lcdr2.jpg" alt="" /></a>
+								<a href="recruiting-brainfood-tribune.html" class="image main"><img src="images/microphone.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="keynote-lcdr.html" class="button large">Full Story</a></li>
+									<li><a href="recruiting-brainfood-tribune.html" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
