--- a/lets-work-together.html
+++ b/lets-work-together.html
@@ -47,7 +47,7 @@
 								</header> 
 								<div class="image main"><img src="images/freelance.jpg" alt="" /></div>
 								
-								<p><center><h3>Find my resume <a href="https://francoisrh.github.io/cv.html">here</a></h3></center></p>
+								<p><center><h3><a href="https://francoisrh.github.io/cv.html">👉 Find my resume here 👈</a></h3></center></p>
 								<p><center>Contact me at: fgauthier32 [at] gmail [dot] com</center></p>
 						
 							</section>
