--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					</div>
 
 						<!-- Footer -->
-							<footer>
+							<footer id="footer">
 								<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
@@ -93,7 +93,7 @@
 									<li><a href="https://github.com/FrancoisRH" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 								</section>
-
+								</section>
 							</footer>
 
 
