--- a/cv.html
+++ b/cv.html
@@ -147,7 +147,8 @@
 										<a href="https://www.youtube.com/watch?v=QNzMM3bL7js&feature=emb_title"><b>2018</b> – Comment recruter 200 personnes avec 3 recruteurs ? - François Gauthier à #TruSourcing</a><br /></p>
 
 									<h3>ARTICLES</h3>
-										<p><a href="https://lecoledurecrutement.fr/6-conseils-pour-un-sourcing-plus-efficace/"><b>2020</b> – 6 Conseils Pour Un Sourcing Plus Efficace</a><br />
+										<p><a href="https://www.recruitingbrainfood.com/the-brainfood-tribune/20-questions-with-francois-gauthier/"><b>2021</b> – Recruiting Brainfood tribune – 20 Questions with François Gauthier</a><br />
+										<a href="https://lecoledurecrutement.fr/6-conseils-pour-un-sourcing-plus-efficace/"><b>2020</b> – 6 Conseils Pour Un Sourcing Plus Efficace</a><br />
 										<a href="https://lecoledurecrutement.fr/comment-accelerer-le-processus-de-recrutement/"><b>2018</b> – Comment accélérer le processus de recrutement ?</a><br />
 										<a href="https://techlife.talentsoft.com/mon-premier-hackathon-ba352d952540"><b>2018</b> – Mon premier hackathon</a><br />
 										<a href="https://www.hellotalent.com/fr/blog/recruter-sans-recruteur-cest-possible/"><b>2018</b> – Recruter sans recruteur : c’est possible</a><br />
