--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<br/>
 								
 									<h3>KEYNOTES (vidéo)</h3>
-										<p><a href="https://www.youtube.com/watch?v=5biygEF0E5s"><b>[FR] – 2021</b> – SNP LIVE #1 - Le Sourcing c'est quoi?</a> – [SNP LIVE, YouTube]<br />
+										<p><a href="https://www.youtube.com/watch?v=5biygEF0E5s"><b>[FR] – 2021</b> – Sourceurs ? Non, Peut-Être LIVE #1 - Le Sourcing c'est quoi ?<br />
 										<a href="https://www.youtube.com/watch?v=t8F5vL-6GQY"><b>[FR] – 2020</b> – Quelques astuces pour rendre vos approches efficaces</a> – [LCDR édition 2020, YouTube]<br />
 										<a href="https://www.youtube.com/watch?v=3DszpF7LObg"><b>[FR] – 2018</b> – Commment Hello Talent aide Talentsoft à recruter de manière collaborative</a> – [YouTube]<br />
 										<a href="https://www.youtube.com/watch?v=QNzMM3bL7js&feature=emb_title"><b>[FR] – 2018</b> – Comment recruter 200 personnes avec 3 recruteurs ?</a> – [#TruSourcing édition 2018, YouTube]<br /></p>
