--- a/lets-work-together.html
+++ b/lets-work-together.html
@@ -131,10 +131,10 @@
 								
 								<h2>EDUCATION</h2> <br />
 									<h3>DIPLOMAS</h3>
-										<p><b>2015</b> – Master Management Stratégique des Ressources Humaines, Grenoble IAE<br />
-										<b>2013</b> – Licence Management et Gestion des Entreprises (Licence MGE)<br />
-										<b>2012</b> – DUT Gestion des Entreprises et des Administrations (DUT GEA)<br />
-										<b>2010</b> – Bac Economique et Social (ES)</p>
+										<p><b>2015</b> – Master’s Degree, Strategic Human Resources Management, Grenoble IAE<br />
+										<b>2013</b> – Bachelor’s Degree, Management and Business Administration (MGE Bachelor)<br />
+										<b>2012</b> – Company Management and Administration (DUT GEA)<br />
+										<b>2010</b> – Economy Baccalaureate (ES)</p>
 
 									<h3>CERTIFICATIONS</h3>
 										<p><b>Formation certifiante en recrutement</b> : #Tru Academy d'Or, Link Humans (the French school of recruitment)</p>
