--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 									<h3>KEYNOTES & PODCASTS</h3>
 										<p><a href="https://coderpad.io/events/ai-in-the-hot-seat-how-genai-is-changing-the-cheating-game-in-tech-hiring/ "><b>[EN] – 2024</b> – AI in the Hot Seat: How GenAI Is Changing the Cheating Game in Tech Hiring</a> – [Coderpad webinar]<br />
 										<a href="https://www.cegid.com/global/podcast-video/hiring-for-retention-rather-than-vacancy-filling/"><b>[EN] – 2024</b> – Hiring for retention rather than vacancy filling</a> – [Cegid website]<br />
+										<a href="https://www.cegid.com/global/podcast-video/recruiting-for-cultural-fit-over-skills-for-retention/"><b>[EN] – 2024</b> – Recruiting for cultural fit over skills for better retention</a> – [Cegid website]<br />
 										<a href="https://www.youtube.com/watch?v=5biygEF0E5s"><b>[FR] – 2021</b> – Sourceurs ? Non, Peut-Être : Live #1 - Le Sourcing c'est quoi ?</a> – [YouTube]<br />
 										<a href="https://www.youtube.com/watch?v=t8F5vL-6GQY"><b>[FR] – 2020</b> – Quelques astuces pour rendre vos approches efficaces</a> – [LCDR édition 2020, YouTube]<br />
 										<a href="https://www.youtube.com/watch?v=3DszpF7LObg"><b>[FR] – 2018</b> – Commment Hello Talent aide Talentsoft à recruter de manière collaborative</a> – [YouTube]<br />
