--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 								
 									<h3>KEYNOTES & PODCASTS</h3>
 										<p><a href="https://coderpad.io/events/ai-in-the-hot-seat-how-genai-is-changing-the-cheating-game-in-tech-hiring/ "><b>[EN] – 2024</b> – Coderpad Webinar – AI in the Hot Seat: How GenAI Is Changing the Cheating Game in Tech Hiring</a><br />
+										<a href="https://www.youtube.com/watch?v=qNAsWhVaR8s"><b>[FR] – 2024</b> – Benjamin Jean's Podcast – One hour with François Gauthier</a><br />
 										<a href="https://www.cegid.com/global/podcast-video/hiring-for-retention-rather-than-vacancy-filling/"><b>[EN] – 2024</b> – HR Debatable Podcast – Hiring for retention rather than vacancy filling</a><br />
 										<a href="https://www.cegid.com/global/podcast-video/recruiting-for-cultural-fit-over-skills-for-retention/"><b>[EN] – 2024</b> – HR Debatable Podcast – Recruiting for cultural fit over skills for better retention</a><br />
 										<a href="https://www.cegid.com/global/podcast-video/in-2024-early-career-hiring-overtakes-campus-recruitment/"><b>[EN] – 2024</b> – HR Debatable Podcast – In 2024 early career hiring overtakes campus recruitment</a><br />
